--- a/Home.html
+++ b/Home.html
@@ -61,12 +61,12 @@
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://mobirise.co">UNETE AHORA</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-7" href="https://discord.gg/7XfcTC4" target="_blank">UNETE AHORA</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-rv0F8J6sxY" id="header2-2">
+<section class="engine"><a href="https://mobirise.info/i">web creation software</a></section><section class="cid-rv0F8J6sxY" id="header2-2">
 
     
 
@@ -98,7 +98,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-7"><em><strong>¡Bienvenido a la Página Oficial de Gaming Force!&nbsp;</strong></em><em><strong><br></strong></em>¿Eres aficionado a los videojuegos? ¡Somos una comunidad de Jugadores, Streamers, Desarrolladores, etc.
 <br>Nuestro servidor cuenta con Bots Privados, Sorteos diarios y Eventos/Dinámicas con las que podrás <br>entretenertey tener una experiencia única en nuestro servidor.</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://mobirise.co">UNETE AHORA</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://discord.gg/7XfcTC4" target="_blank">UNETE AHORA</a></div>
             </div>
         </div>
     </div>
